--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="shortcut icon" type="image/png" href="./img/ms-icon-310x310.png">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Malume | Promoções</title>
 </head>
 <body>
@@ -46,20 +46,20 @@
                 <h3>HOME
                     <i class="bi bi-house"></i>
                 </h3>
-                <div class="cols__3">
-                    <div class="product">
+                <div class="cols__4">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
@@ -69,20 +69,20 @@
                 <h3>Clothes
                     <i class="bi bi-gender-female"></i>                
                 </h3>
-                <div class="cols__3">
-                    <div class="product">
+                <div class="cols__4">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
@@ -91,20 +91,20 @@
             <div class="store__home">
                 <h3>Make up
                     <i class="bi bi-bag-heart-fill"></i>                </h3>
-                <div class="cols__3">
-                    <div class="product">
+                <div class="cols__4">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
@@ -114,20 +114,20 @@
                 <h3>Clothes
                     <i class="bi bi-gender-female"></i>                
                 </h3>
-                <div class="cols__3">
-                    <div class="product">
+                <div class="cols__4">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
-                    <div class="product">
+                    <div class="product" data-aos="fade-up">
                         <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
                         <p>descricao</p>
                     </div>
@@ -136,6 +136,8 @@
         </div>
         
     </section>
+
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="./scripts/scripts.js"></script>
 
 </body>
