--- a/src/index.html
+++ b/src/index.html
@@ -48,20 +48,43 @@
                 </h3>
                 <div class="cols__4">
                     <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
+                        <a href="https://shopee.com.br/product/328538026/23597424619?uls_trackid=50a0lpht0070&utm_campaign=-&utm_content=----&utm_medium=affiliates&utm_source=an_18108630007&utm_term=bgoav7af65ao">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                            <p>Mini Rodo Esfregão Absorvente Portátil Limpeza Multifuncional Mesa Janela</p>
+                        </a>
+                    </div>
+
+                    <div class="product" data-aos="fade-up">
+                        <a href="https://s.shopee.com.br/10ibeKF7rE?share_channel_code=1">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-22090-e2d3iha9ryhv98" alt="">
+                            <p> Mini Umidificador Difusor Aromatizador</p>
+                        </a>
+                    </div>
+                    
+                    <div class="product" data-aos="fade-up">
+                        <a href=https://s.shopee.com.br/6fMyOm25vw?share_channel_code=1>
+                            <img src="https://down-br.img.susercontent.com/file/br-11134211-7r98o-lq4u93098burf6" alt="">
+                            <p>Tapete Felpudo 40mm Para Sala E Quarto</p>
+                        </a>                    
+                    </div>
+
+                    <div class="product" data-aos="fade-up">
+                        <a href="https://s.shopee.com.br/6pgObAlpye?share_channel_code=1">
+                            <img src="https://down-br.img.susercontent.com/file/br-11134207-7r98o-ltfa9qyg61bd82" alt="">
+                            <p>Aplicador Pasta de Dente Suporte Dispenser Escova Automático</p>
+                        </a>                    
+                    </div>                    
+                    <div class="product" data-aos="fade-up">
+                        <a href="https://s.shopee.com.br/5fURD3Kk2S?share_channel_code=1">
+                            <img src="https://down-br.img.susercontent.com/file/br-11134207-7r98o-lorva0315kmq1d" alt="">
+                            <p>Kit 2 Prateleiras Suporte Com Alto Adesivos </p>
+                        </a>                    
                     </div>
                     <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
-                    </div>
-                    <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
-                    </div>
-                    <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
+                        <a href="https://s.shopee.com.br/9pK0AkdGl1?share_channel_code=1">
+                            <img src="https://down-br.img.susercontent.com/file/f570616052b80c93f1709bdfdb1806cd" alt="">
+                            <p>Luzes De Led Usb Strip 5050 RGB 16Colours</p>
+                        </a>                    
                     </div>
                 </div>
             </div>
@@ -71,20 +94,28 @@
                 </h3>
                 <div class="cols__4">
                     <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
+                        <a href="#">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                            <p>Short Feminino Alfaiataria Social com Cinto Cintura Alta</p>
+                        </a>   
                     </div>
                     <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
+                        <a href="#">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                            <p>descricao</p>
+                        </a>   
                     </div>
                     <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
+                        <a href="#">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                            <p>descricao</p>
+                        </a>   
                     </div>
                     <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
+                        <a href="#">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                            <p>descricao</p>
+                        </a>   
                     </div>
                 </div>
             </div>
@@ -93,42 +124,41 @@
                     <i class="bi bi-bag-heart-fill"></i>                </h3>
                 <div class="cols__4">
                     <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                        <a href="#">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                            <p>descricao</p>
+                        </a>
+                    </div>
+                    <div class="product" data-aos="fade-up">
+                        <a href="#">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                            <p>descricao</p>
+                        </a>   
+                    </div>
+                    <div class="product" data-aos="fade-up">
+                        <a href="#">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                            <p>descricao</p>
+                        </a>   
+                    </div>
+                    <div class="product" data-aos="fade-up">
+                        <a href="#">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                            <p>descricao</p>
+                        </a>   
+                    </div>
+                    <div class="product" data-aos="fade-up">
+                        <a href="#">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                            <p>descricao</p>
+                        </a>   
                         <p>descricao</p>
                     </div>
                     <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
-                    </div>
-                    <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
-                    </div>
-                    <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
-                    </div>
-                </div>
-            </div>
-            <div class="store__home">
-                <h3>Clothes
-                    <i class="bi bi-gender-female"></i>                
-                </h3>
-                <div class="cols__4">
-                    <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
-                    </div>
-                    <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
-                    </div>
-                    <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                        <p>descricao</p>
-                    </div>
-                    <div class="product" data-aos="fade-up">
-                        <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                        <a href="#">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
+                            <p>descricao</p>
+                        </a>   
                         <p>descricao</p>
                     </div>
                 </div>
