--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
 
     <section class="store">
         <div class="container">
+            <!-- Home -->
             <div class="store__home">
                 <h3>HOME
                     <i class="bi bi-house"></i>
@@ -50,114 +51,116 @@
                     <div class="product" data-aos="fade-up">
                         <a href="https://shopee.com.br/product/328538026/23597424619?uls_trackid=50a0lpht0070&utm_campaign=-&utm_content=----&utm_medium=affiliates&utm_source=an_18108630007&utm_term=bgoav7af65ao">
                             <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p>Mini Rodo Esfregão Absorvente Portátil Limpeza Multifuncional Mesa Janela</p>
+                            <p class="product__description">Mini Rodo Esfregão Absorvente Portátil Limpeza Multifuncional</p>
                         </a>
                     </div>
 
                     <div class="product" data-aos="fade-up">
                         <a href="https://s.shopee.com.br/10ibeKF7rE?share_channel_code=1">
                             <img src="https://down-br.img.susercontent.com/file/sg-11134201-22090-e2d3iha9ryhv98" alt="">
-                            <p> Mini Umidificador Difusor Aromatizador</p>
+                            <p class="product__description"> Mini Umidificador Difusor Aromatizador</p>
                         </a>
                     </div>
                     
                     <div class="product" data-aos="fade-up">
                         <a href=https://s.shopee.com.br/6fMyOm25vw?share_channel_code=1>
                             <img src="https://down-br.img.susercontent.com/file/br-11134211-7r98o-lq4u93098burf6" alt="">
-                            <p>Tapete Felpudo 40mm Para Sala E Quarto</p>
+                            <p class="product__description">Tapete Felpudo 40mm Para Sala E Quarto</p>
                         </a>                    
                     </div>
 
                     <div class="product" data-aos="fade-up">
                         <a href="https://s.shopee.com.br/6pgObAlpye?share_channel_code=1">
                             <img src="https://down-br.img.susercontent.com/file/br-11134207-7r98o-ltfa9qyg61bd82" alt="">
-                            <p>Aplicador Pasta de Dente Suporte Dispenser Escova Automático</p>
+                            <p class="product__description">Aplicador Pasta de Dente Suporte Dispenser Escova Automático</p>
                         </a>                    
                     </div>                    
                     <div class="product" data-aos="fade-up">
                         <a href="https://s.shopee.com.br/5fURD3Kk2S?share_channel_code=1">
                             <img src="https://down-br.img.susercontent.com/file/br-11134207-7r98o-lorva0315kmq1d" alt="">
-                            <p>Kit 2 Prateleiras Suporte Com Alto Adesivos </p>
+                            <p class="product__description">Kit 2 Prateleiras Suporte Com Alto Adesivos </p>
                         </a>                    
                     </div>
                     <div class="product" data-aos="fade-up">
                         <a href="https://s.shopee.com.br/9pK0AkdGl1?share_channel_code=1">
                             <img src="https://down-br.img.susercontent.com/file/f570616052b80c93f1709bdfdb1806cd" alt="">
-                            <p>Luzes De Led Usb Strip 5050 RGB 16Colours</p>
+                            <p class="product__description">Luzes De Led Usb Strip 5050 RGB 16Colours</p>
                         </a>                    
                     </div>
                 </div>
             </div>
+            <!-- Clothes -->
             <div class="store__home">
                 <h3>Clothes
                     <i class="bi bi-gender-female"></i>                
                 </h3>
                 <div class="cols__4">
                     <div class="product" data-aos="fade-up">
-                        <a href="#">
-                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p>Short Feminino Alfaiataria Social com Cinto Cintura Alta</p>
+                        <a href="">
+                            <img src="https://down-br.img.susercontent.com/file/br-11134207-7r98o-luw3a1pkupuo65" alt="">
+                            <p class="product__description">Short Feminino Alfaiataria Social com Cinto Cintura Alta</p>
                         </a>   
                     </div>
                     <div class="product" data-aos="fade-up">
-                        <a href="#">
-                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p>descricao</p>
+                        <a href="">
+                            <img src="https://down-br.img.susercontent.com/file/br-11134207-7r98o-lru8eqx3b1n1a7" alt="">
+                            <p class="product__description">Blusa Termica  feminina Segunda Pele Térmica Manga Longa com Proteçã</p>
                         </a>   
                     </div>
                     <div class="product" data-aos="fade-up">
-                        <a href="#">
-                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p>descricao</p>
+                        <a href="">
+                            <img src="https://down-br.img.susercontent.com/file/cn-11134301-7r98o-lncinif5wubscb" alt="">
+                            <p class="product__description"> Meias Estilo Preppy Preppy Ladies Pink Letters</p>
                         </a>   
                     </div>
                     <div class="product" data-aos="fade-up">
-                        <a href="#">
-                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p>descricao</p>
+                        <a href="">
+                            <img src="https://down-br.img.susercontent.com/file/br-11134207-7r98o-lsm21rbheivh16" alt="">
+                            <p class="product__description">Calça Feminina Pantalona Wide Leg</p>
                         </a>   
                     </div>
                 </div>
             </div>
+            <!-- Make up -->
             <div class="store__home">
                 <h3>Make up
                     <i class="bi bi-bag-heart-fill"></i>                </h3>
                 <div class="cols__4">
                     <div class="product" data-aos="fade-up">
-                        <a href="#">
-                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p>descricao</p>
+                        <a href="https://s.shopee.com.br/LSurP68fp?share_channel_code=1">
+                            <img src="https://down-br.img.susercontent.com/file/ec5de0797a1313ea2bfd529a573c6843" alt="">
+                            <p class="product__description">Destacador Monocromático</p>
                         </a>
                     </div>
                     <div class="product" data-aos="fade-up">
-                        <a href="#">
-                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p>descricao</p>
+                        <a href="https://s.shopee.com.br/9pK0Ao2SJo?share_channel_code=1">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134301-7rbl2-lqlqqggxvlwq0d" alt="">
+                            <p class="product__description">Verniz Híbrido Semipermanente</p>
+                        </a>   
+                    </div>
+                    <div class="product" data-aos="fade-up">
+                        <a href="https://s.shopee.com.br/5KraoVtWXC?share_channel_code=1">
+                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-22110-ygzcgf588bjv4a" alt="">
+                            <p class="product__description">Máquina de corta cabelo Dragão</p>
+                        </a>   
+                    </div>
+                    <div class="product" data-aos="fade-up">
+                        <a href="https://s.shopee.com.br/5KraoYANq0?share_channel_code=1">
+                            <img src="http://down-br.img.susercontent.com/file/sg-11134201-7rccy-lrpz9jvjdpizca" alt="">
+                            <p class="product__description">Escova Secadora Alisador</p>
                         </a>   
                     </div>
                     <div class="product" data-aos="fade-up">
                         <a href="#">
                             <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p>descricao</p>
-                        </a>   
-                    </div>
-                    <div class="product" data-aos="fade-up">
-                        <a href="#">
-                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p>descricao</p>
-                        </a>   
-                    </div>
-                    <div class="product" data-aos="fade-up">
-                        <a href="#">
-                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p>descricao</p>
+                            <p class="product__description">descricao</p>
                         </a>   
                         <p>descricao</p>
                     </div>
                     <div class="product" data-aos="fade-up">
                         <a href="#">
                             <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p>descricao</p>
+                            <p class="product__description">descricao</p>
                         </a>   
                         <p>descricao</p>
                     </div>
