--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,20 @@
 
     <section class="hero">
         <div class="container">
-            <p class="hero__text">
-                <span id="promoClockAlive"></span>.
-            </p>
+            <div class="hero__col">
+                <div class="hero__text">
+                    <button type="button" class="hero__button">Home</button>
+                </div>
+                <div class="hero__text">
+                    <button type="button" class="hero__button">Clothes</button>
+                </div>
+                <div class="hero__text">
+                    <button type="button" class="hero__button">Skin Care</button>
+                </div>
+                <div class="hero__text">
+                    <button type="button" class="hero__button">Make up</button>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -149,20 +160,6 @@
                             <img src="http://down-br.img.susercontent.com/file/sg-11134201-7rccy-lrpz9jvjdpizca" alt="">
                             <p class="product__description">Escova Secadora Alisador</p>
                         </a>   
-                    </div>
-                    <div class="product" data-aos="fade-up">
-                        <a href="#">
-                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p class="product__description">descricao</p>
-                        </a>   
-                        <p>descricao</p>
-                    </div>
-                    <div class="product" data-aos="fade-up">
-                        <a href="#">
-                            <img src="https://down-br.img.susercontent.com/file/sg-11134201-7rcc7-ltb8mvlocoa2d4" alt="">
-                            <p class="product__description">descricao</p>
-                        </a>   
-                        <p>descricao</p>
                     </div>
                 </div>
             </div>
