reversao de mudancas

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     <section class="store">
         <div class="container">
             <!-- Home -->
-            <div class="store__home store__home--home active">
+            <div class="store__home store__home--home">
                 <h3>HOME
                     <i class="bi bi-house"></i>
                 </h3>
@@ -166,6 +166,5 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./scripts/scripts.js"></script>
-
 </body>
 </html>
